--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                         class="fa fa-envelope"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/luiz-felipe-ferreira-bossetto/"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <p class="m-0">&copy; All Rights Reserved.</p>
+            <p class="m-0">Optimized and developed by me &copy; All Rights Reserved.</p>
         </div>
     </div>
     <!-- Footer End -->
