--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <h6>Email: <span class="text-secondary">luiz.fbossetto@outlook.com</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Hobbies: <span class="text-secondary">Read, Code, Travel, Play the Guitar</span></h6>
+                            <h6>Hobbies: <span class="text-secondary">Read, Code, Travel, Play the Guitar, Play Games</span></h6>
                         </div>
                     </div>
                 </div>
@@ -170,6 +170,13 @@
                                 (students and faculty).</p>
                         </div>
 
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Esports Athlete</h5>
+                            <p class="mb-2"><strong>Illinois Wesleyan University - Present</strong></p>
+                            <p>Member of an Esports Organization, responsible for creatively create tatics for team, problem solving in cooperation between teammates, and analyzing problems.</p>
+                        </div>
                         
                     </div>
                 </div>
@@ -495,6 +502,18 @@
                         <div id="project-btn" class="portfolio-btn d-flex align-items-center justify-content-center">
                             <a class="project-name" href="https://github.com/luizfboss/Mosquitoes" data-lightbox="portfolio" target="_blank">
                                 Mosquitoe Game
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-4 col-md-6 mb-4 portfolio-item applications">
+                    <div class="position-relative overflow-hidden mb-2">
+                        <img class="img-fluid rounded w-100" src="img/alarm_clock.webp" alt="">
+                        <div id="project-btn" class="portfolio-btn d-flex align-items-center justify-content-center">
+                            <a class="project-name" href="https://github.com/luizfboss/cpp_alarm_clock" data-lightbox="portfolio" target="_blank">
+                                Alarm Clock
                             </a>
                         </div>
                     </div>
