--- a/index.html
+++ b/index.html
@@ -140,6 +140,45 @@
 
 
                     <h3 class="mb-4">Extracurriculars and Experiences</h3>
+                    <div class="border-left border-primary pt-2 pl-4 ml-2">
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Web Designer</h5>
+                            <p class="mb-2"><strong>Freelancer - 2022</strong></p>
+                            <p>Developed websites for local businesses, increasing brand exposure and improving
+                            revenue.
+                            </p>
+                        </div>
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Coding Mentor</h5>
+                            <p class="mb-2"><strong>Grow&Share - 2021</strong></p>
+                            <p>In charge of teaching coding skills to high school students whose school does not offer
+                                coding classes.</p>
+                        </div>
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Student Manager</h5>
+                            <p class="mb-2"><strong>Sodexo - Present</strong></p>
+                            <p>Prepare and cook food ensuring the highest quality service and experience for customers
+                                (students and faculty).</p>
+                        </div>
+
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute"
+                                style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Esports Athlete</h5>
+                            <p class="mb-2"><strong>Illinois Wesleyan University - Present</strong></p>
+                            <p>Member of an Esports Organization, responsible for creatively create tatics for team, problem solving in cooperation between teammates, and analyzing problems.</p>
+                        </div>
+                        
+                    </div>
 
                 </div>
                 <div class="col-lg-6">
