final updates on portfolio section

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">I'm Luiz</h3>
-                    <p>A passionate, creative, and self-motivated coding student from Brazil. I have been studying and
-                        learning about algorithms, websites, and applications for two years now, and since then, coding has been part of my life. Now that I am a sophomroe at Illinois Wesleyan University, I'm willing to expand my knowledge, and help others through what technology can offer.
+                    <p>A passionate and creative Computer Science Major from Brazil, currently living in Illinois. I have been studying and learning about computer-science-related topics for three years now, and since the beginning, I've been fascinated by the world of technology. As I showcase my work in this portfolio, I aim to demonstrate my passion for computer science and highlight the projects that reflect my skills, creativity, and dedication.
                     </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2">
@@ -95,7 +94,7 @@
                             <h6>Degree: <span class="text-secondary">Bachelor's Degree (in progress)</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Years of experience: <span class="text-secondary">2 Years (self-taught)</span></h6>
+                            <h6>Years of experience: <span class="text-secondary">3 Years (self-taught and now in college)</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
                             <h6>Nationality: <span class="text-secondary">Brazilian</span></h6>
@@ -104,7 +103,7 @@
                             <h6>Email: <span class="text-secondary">luiz.fbossetto@outlook.com</span></h6>
                         </div>
                         <div class="col-sm-6 py-2">
-                            <h6>Hobbies: <span class="text-secondary">Read, Code, Travel, Play the Guitar, Play Games</span></h6>
+                            <h6>Hobbies: <span class="text-secondary">Read, Code, Travel, Play the Guitar</span></h6>
                         </div>
                     </div>
                 </div>
@@ -396,17 +395,19 @@
                 </h1>
                 <h1 class=" position-absolute text-uppercase text-primary" id="#contact-me">My Portfolio</h1>
             </div>
-            <div class="row">
-                <div class="col-12 text-center mb-2">
-                    <ul class="list-inline mb-4" id="portfolio-flters">
-                        <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".web-pages">Web Pages</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".game">Games</li>
-                        <li class="btn btn-sm btn-outline-primary m-1" data-filter=".applications">Applications</li>
-                    </ul>
+            <!--
+                <div class="row">
+                    <div class="col-12 text-center mb-2">
+                        <ul class="list-inline mb-4" id="portfolio-flters">
+                            <li class="btn btn-sm btn-outline-primary m-1 active" data-filter="*">All</li>
+                            <li class="btn btn-sm btn-outline-primary m-1" data-filter=".web-pages">Web Pages</li>
+                            <li class="btn btn-sm btn-outline-primary m-1" data-filter=".game">Games</li>
+                            <li class="btn btn-sm btn-outline-primary m-1" data-filter=".applications">Applications</li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
 
+            -->
 
             <div class="row portfolio-container">
                 <div data-aos="fade-right" class=" portfolio-item applications">
@@ -431,9 +432,9 @@
                     </div>
                 </div> 
                 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div data-aos="fade-right" class=" portfolio-item web-pages">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/spotify.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/spotify.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Spotify Clone</h2>
@@ -456,7 +457,7 @@
 
                 <div data-aos="fade-right" class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/web-scraper.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/web-scraper.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Web Scraper</h2>
@@ -477,7 +478,7 @@
 
                 <div data-aos="fade-right" class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/calculator.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/calculator.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>JS Calculator</h2>
@@ -497,9 +498,11 @@
                     </div>
                 </div> 
 
+                <br>
+
                 <div data-aos="fade-right" class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/auto-email.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/auto-email.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Automated Email Sender</h2>
@@ -516,10 +519,11 @@
                     </div>
                 </div> 
 
+                <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div data-aos="fade-right" class=" portfolio-item web-pages">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/finans.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/finans.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Finans</h2>
@@ -539,10 +543,12 @@
                     </div>
                 </div> 
 
+                <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+
+                <div data-aos="fade-right" class=" portfolio-item web-pages">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/playstation.jpg" alt="">
+                        <img width="600px" class="img-fluid" src="img/playstation.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>PlayStation DualShock Landing Page</h2>
@@ -561,10 +567,12 @@
                     </div>
                 </div> 
 
+                <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+
+                <div data-aos="fade-right" class=" portfolio-item game">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/mosquitoe.png" alt="">
+                        <img width="600px" class="img-fluid" src="img/mosquitoe.png" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Mosquito Catcher</h2>
@@ -583,17 +591,18 @@
                     </div>
                 </div> 
 
+                <br>
+
 
                 <div data-aos="fade-right" class=" portfolio-item applications">
                     <div class="portfolio-img-container">
-                        <img class="img-fluid" src="img/alarm_clock.webp" alt="">
+                        <img width="600px" class="img-fluid" src="img/alarm_clock.webp" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Alarm Clock</h2>
                         <p>A functional alarm clock designed in C++. My first project in college.</p>
                         <div class="more-info">
-                            <button class="info-btn">Check Repository!</button>
-                            <button class="info-btn">View Page</button>
+                            <button class="info-btn"><a href="https://github.com/luizfboss/cpp_alarm_clock" target="_blank">Check Repository!</a></button>
                         </div>
 
                         <br>
