--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="mb-4">Courses</h3>
+                    <h3 class="mb-4">Courses & Certifications</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
 
 
@@ -192,7 +192,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Mastering Web Development</h5>
-                            <p class="mb-2"><strong>Faus</strong> | <small>2022 - Present</small></p>
+                            <p class="mb-2"><strong>Faus</strong> | <small>2022 - 2023</small></p>
                         </div>
 
                         <div class="position-relative mb-4">
@@ -236,7 +236,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute"
                                 style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Digital Art, Design and Animation Course</h5>
+                            <h5 class="font-weight-bold mb-1">Digital Art, Design, and Animation Course</h5>
                             <p class="mb-2"><strong>School of Art, Games and Animation (SAGA)</strong> |
                                 <small>2019-2021</small>
                             </p>
@@ -278,7 +278,7 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">CSS</h6>
-                            <h6 class="font-weight-bold">Intermediate</h6>
+                            <h6 class="font-weight-bold">Experienced</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar blue" role="progressbar" aria-valuenow="85" aria-valuemin="0"
@@ -289,7 +289,7 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">Javascript</h6>
-                            <h6 class="font-weight-bold">Intermediate</h6>
+                            <h6 class="font-weight-bold">Experienced</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar yellow" role="progressbar" aria-valuenow="80" aria-valuemin="0"
@@ -330,7 +330,7 @@
                         <div class="skill mb-4">
                             <div class="d-flex justify-content-between">
                                 <h6 class="font-weight-bold">Microsoft Excel</h6>
-                                <h6 class="font-weight-bold">Intermediate</h6>
+                                <h6 class="font-weight-bold">Experienced</h6>
                             </div>
                             <div class="progress">
                                 <div class="progress-bar light-green" role="progressbar" aria-valuenow="70" aria-valuemin="0"
@@ -338,9 +338,20 @@
                             </div>
                         </div>
 
+                        <div class="skill mb-4">
+                            <div class="d-flex justify-content-between">
+                                <h6 class="font-weight-bold">Python</h6>
+                                <h6 class="font-weight-bold">Experienced</h6>
+                            </div>
+                            <div class="progress">
+                                <div class="progress-bar python" role="progressbar" aria-valuenow="80" aria-valuemin="0"
+                                    aria-valuemax="100"></div>
+                            </div>
+                        </div>
+
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">Bootstrap</h6>
-                            <h6 class="font-weight-bold">Intermediate</h6>
+                            <h6 class="font-weight-bold">Experienced</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar purple" role="progressbar" aria-valuenow="70" aria-valuemin="0"
@@ -351,7 +362,7 @@
                     <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">C++</h6>
-                            <h6 class="font-weight-bold">Intermediate</h6>
+                            <h6 class="font-weight-bold">Experienced</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar dark-purple" role="progressbar" aria-valuenow="75" aria-valuemin="0"
@@ -370,16 +381,7 @@
                         </div>
                     </div>
 
-                    <div class="skill mb-4">
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">Adobe Photoshop</h6>
-                            <h6 class="font-weight-bold">Beginner</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-dark-blue" role="progressbar" aria-valuenow="50" aria-valuemin="0"
-                                aria-valuemax="100"></div>
-                        </div>
-                    </div>
+                    
                     
                 </div>
             </div>
@@ -647,7 +649,7 @@
                         class="fa fa-envelope"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/luiz-felipe-ferreira-bossetto/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
-            <p class="m-0">Optimized and developed by Luiz Bossetto &copy; All Rights Reserved.</p>
+            <p class="m-0">Developed by Luiz Bossetto &copy; All Rights Reserved.</p>
         </div>
     </div>
     <!-- Footer End -->
