--- a/index.html
+++ b/index.html
@@ -412,13 +412,16 @@
             -->
 
             <div class="row portfolio-container">
+
+                <br>
+
                 <div data-aos="fade-right" class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="580px" class="img-fluid" src="img/meme-generator.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Meme Generator</h2>
-                        <p>A functional meme generator implemented using ReactJS. This generates a meme using two sentences given by the user, and a random image from a local database.</p>
+                        <p>A ReactJS implementation of a functional meme generator. This generates a meme using two sentences given by the user, and a random image from a local database.</p>
                         <div class="more-info">
                             <button class="info-btn"><a href="https://github.com/luizfboss/ReactJS-meme-generator" target="_blank">Check Repository!</a></button>
                         </div>
@@ -438,11 +441,54 @@
 
                 <div data-aos="fade-right" class=" portfolio-item applications">
                     <div class="portfolio-img-container">
+                        <img width="600px" class="img-fluid" src="img/kindle.png" alt="">
+                    </div>
+                    <div class="portfolio-content">
+                        <h2>Kindle</h2>
+                        <p>A Python backend implementation of a Kindle device.</p>
+                        <div class="more-info">
+                            <button class="info-btn"><a href="https://github.com/luizfboss/KindleBackend" target="_blank">Check Repository!</a></button>
+                        </div>
+
+                        <br>
+
+                        <div class="lang-tags">
+                            <button class="python">Python</button>
+                        </div>
+                    </div>
+                </div> 
+
+                <br>
+
+                <div data-aos="fade-right" class=" portfolio-item applications">
+                    <div class="portfolio-img-container">
+                        <img width="600px" class="img-fluid" src="img/discord-bot.png" alt="">
+                    </div>
+                    <div class="portfolio-content">
+                        <h2>Discord Bot</h2>
+                        <p>A study buddy for Discord users. Its commands can provide useful information about technologies and provide easy access to tools for a more productive studying session.</p>
+                        <div class="more-info">
+                            <button class="info-btn"><a href="https://github.com/luizfboss/DiscordBot" target="_blank">Check Repository!</a></button>
+                        </div>
+
+                        <br>
+
+                        <div class="lang-tags">
+                            <button class="javascript">JavaScript</button>
+                            <button class="discordjs">DiscordJS</button>
+                        </div>
+                    </div>  
+                </div> 
+
+                <br>
+
+                <div data-aos="fade-right" class=" portfolio-item applications">
+                    <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/web-scraper.jpg" alt="">
                     </div>
                     <div class="portfolio-content">
                         <h2>Web Scraper</h2>
-                        <p>A Web Scraper that gathers information from the internet, based on parameters. In this project, headlines from sources of information (news) are gathered and displayed in the console.</p>
+                        <p>A Web Scraper that gathers information from the internet, based on parameters.</p>
                         <div class="more-info">
                             <button class="info-btn"><a href="https://github.com/luizfboss/js-web-scraper" target="_blank">Check Repository!</a></button>
                         </div>
@@ -464,10 +510,34 @@
                     </div>
                     <div class="portfolio-content">
                         <h2>Spotify Clone</h2>
-                        <p>A fully responsive Spotify Web Page clone implemented using Bootstrap.</p>
+                        <p>A Bootstrap implementation of a fully responsive Spotify Web Page clone.</p>
                         <div class="more-info">
                             <button class="info-btn"><a href="https://github.com/luizfboss/spotify" target="_blank">Check Repository!</a></button>
                             <button class="info-btn"><a href="https://luizfboss.github.io/spotify/" target="_blank">View Page</a></button>
+                        </div>
+
+                        <br>
+
+                        <div class="lang-tags">
+                            <button disabled class="html">HTML</button>
+                            <button disabled class="css">CSS</button>
+                            <button disabled class="bootstrap">Bootstrap</button>
+                        </div>
+                    </div>
+                </div> 
+
+                <br>
+
+                <div data-aos="fade-right" class=" portfolio-item web-pages">
+                    <div class="portfolio-img-container">
+                        <img width="600px" class="img-fluid" src="img/finans.jpg" alt="">
+                    </div>
+                    <div class="portfolio-content">
+                        <h2>Finans</h2>
+                        <p>A Bootstrap implementation of a responsive web page for a ficctional finance-related company.</p>
+                        <div class="more-info">
+                            <button class="info-btn"><a href="https://github.com/luizfboss/Finans" target="_blank">Check Repository!</a></button>
+                            <button class="info-btn"><a href="https://luizfboss.github.io/Finans/" target="_blank">View Page</a></button>
                         </div>
 
                         <br>
@@ -509,7 +579,7 @@
                     </div>
                     <div class="portfolio-content">
                         <h2>Alarm Clock</h2>
-                        <p>A functional alarm clock implemented using C++. Features such as AM/PM, Snooze Button, and alarm "sounds" have been added to this project.</p>
+                        <p>A C++ implementation of a functional alarm clock. Features such as AM/PM, Snooze Button, and alarm "sounds" have been added to this project.</p>
                         <div class="more-info">
                             <button class="info-btn"><a href="https://github.com/luizfboss/cpp_alarm_clock" target="_blank">Check Repository!</a></button>
                         </div>
@@ -530,7 +600,7 @@
                     </div>
                     <div class="portfolio-content">
                         <h2>Mosquito Catcher</h2>
-                        <p>A mini game implemented using JavaScript. This game randomly generates mosquitoes around the screen, and the player has to catch them as fast as possible in order to score.</p>
+                        <p>A JavaScript implementation of a mini game that randomly generates mosquitoes around the screen, and the player has to catch them as fast as possible in order to score.</p>
                         <div class="more-info">
                             <button class="info-btn"><a href="https://github.com/luizfboss/Mosquitoes" target="_blank">Check Repository!</a></button>
                         </div>
@@ -545,97 +615,8 @@
                     </div>
                 </div> 
 
-
-                <div data-aos="fade-right" class=" portfolio-item applications">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/calculator.jpg" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>JS Calculator</h2>
-                        <p>A fully functional calculator developed using JavaScript.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/JS-Calculator" target="_blank">Check Repository!</a></button>
-                            <button class="info-btn"><a href="https://luizfboss.github.io/JS-Calculator/" target="_blank">View Page</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="html">HTML</button>
-                            <button disabled class="css">CSS</button>
-                            <button disabled class="javascript">JavaScript</button>
-                        </div>
-                    </div>
-                </div> 
-
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item web-pages">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/finans.jpg" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Finans</h2>
-                        <p>A responsive web page for a ficctional finance-related company, implemented using Bootstrap.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/Finans" target="_blank">Check Repository!</a></button>
-                            <button class="info-btn"><a href="https://luizfboss.github.io/Finans/" target="_blank">View Page</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="html">HTML</button>
-                            <button disabled class="css">CSS</button>
-                            <button disabled class="bootstrap">Bootstrap</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
-
-
-                <div data-aos="fade-right" class=" portfolio-item web-pages">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/playstation.jpg" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>PlayStation DualShock Landing Page</h2>
-                        <p>A fully responsive landing page that works as a display of a new released product of a company.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/playstation-dualshock-interface" target="_blank">Check Repository!</a></button>
-                            <button class="info-btn"><a href="https://luizfboss.github.io/playstation-dualshock-interface/" target="_blank">View Page</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button disabled class="html">HTML</button>
-                            <button disabled class="css">CSS</button>
-                        </div>
-                    </div>
-                </div> 
-
-                <br>
-
-                <div data-aos="fade-right" class=" portfolio-item applications">
-                    <div class="portfolio-img-container">
-                        <img width="600px" class="img-fluid" src="img/memory-game.jpg" alt="">
-                    </div>
-                    <div class="portfolio-content">
-                        <h2>Memory Game</h2>
-                        <p>The memory game is an interactive game where players test their memory skills by matching pairs of cards. The game is implemented using JavaScript to handle the logic and user interactions.</p>
-                        <div class="more-info">
-                            <button class="info-btn"><a href="https://github.com/luizfboss/js-memory-game" target="_blank">Check Repository!</a></button>
-                        </div>
-
-                        <br>
-
-                        <div class="lang-tags">
-                            <button class="javascript">JavaScript</button>
-                        </div>
-                    </div>
-                </div> 
             </div>
         </div>
     </div>
