fading effect - removed

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="580px" class="img-fluid" src="img/meme-generator.jpg" alt="">
                     </div>
@@ -439,7 +439,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/kindle.png" alt="">
                     </div>
@@ -460,7 +460,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/discord-bot.png" alt="">
                     </div>
@@ -482,7 +482,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/web-scraper.jpg" alt="">
                     </div>
@@ -504,7 +504,7 @@
 
                 <br>
                 
-                <div data-aos="fade-right" class=" portfolio-item web-pages">
+                <div class=" portfolio-item web-pages">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/spotify.jpg" alt="">
                     </div>
@@ -528,7 +528,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item web-pages">
+                <div class=" portfolio-item web-pages">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/finans.jpg" alt="">
                     </div>
@@ -552,7 +552,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/auto-email.jpg" alt="">
                     </div>
@@ -573,7 +573,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item applications">
+                <div class=" portfolio-item applications">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/alarm_clock.webp" alt="">
                     </div>
@@ -594,7 +594,7 @@
 
                 <br>
 
-                <div data-aos="fade-right" class=" portfolio-item game">
+                <div class=" portfolio-item game">
                     <div class="portfolio-img-container">
                         <img width="600px" class="img-fluid" src="img/mosquitoe.png" alt="">
                     </div>
@@ -649,11 +649,6 @@
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-    <!-- On Scroll Script -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
 
 </html>
